# multi-agents-router-knowledge-base

./: .gitignore  README.md  main.py  pyproject.toml
agent/: __init__.py  agent.py
agent/graph/: __init__.py  edges.py  nodes.py  state.py
agent/llm/: model.py
agent/tools/: __init__.py
app/: main.py
app/agents/: __init__.py  agent.py
app/agents/graph/: __init__.py  edges.py  nodes.py  state.py
app/agents/llm/: __init__.py  model.py
app/agents/tools/: __init__.py  github.py  notion.py  slack.py
app/api/: routes_health.py  routes_query.py
app/api/schemas/: __init__.py
app/schemas/: query.py
my_agent/: agents.py  router_graph.py  router_nodes.py  router_prompts.py  router_schemas.py  router_workflow.py  state.py  tools.py
tests/: conftest.py  test_api_routes.py  test_router_nodes.py  test_router_workflow.py
